@@ -1,5 +1,7 @@
 v3.6.6 (XXXX-XX-XX)
 -------------------
+* Fixed internal issue #748: Fixed reading of primary sort values for
+  late materialization.
 
 * Fix: writeConcern is now honored correctly (ES-655).
 
